test/docs-doctest/fixtures/concurrency-channel-type-mismatch.jac
type ChannelHandle a = | ChannelOpaque
type ChannelError = | ChannelClosed | InvalidCapacity(requested: Int)

once effect Channel a where {
  channel.open : (Int) -> Result ChannelError (ChannelHandle a)
  channel.send : (ChannelHandle a, a) -> Result ChannelError ()
  channel.recv : (ChannelHandle a) -> Result ChannelError a
  channel.close : (ChannelHandle a) -> ()
}

send-text-to-int : (ChannelHandle Int) ->{Channel} Result ChannelError ()
send-text-to-int(channel) = channel.send(channel, "wrong")
